@@ -119,6 +119,7 @@ XMPP (Jabber, Google Talk, etc.)
  * Fixed receiving colors and fonts from iChat. (#1323)
  * Enabled support for custom emoticons as an account option defaulting to on.
  * Fixed joining a group chat from an xmpp URL. (#11785)
+ * "Not Authorized" is now displayed for contacts for whom you need to request authoriation.
 
 MSN
  * Possibly fixed a crash on connect. (#11508)
